fixing alignment mobile

--- a/assets/css/content.css
+++ b/assets/css/content.css
@@ -27,4 +27,13 @@
     .contentcontainer p{
         flex: 1 0 0;
     }
+    .paragraphcontainer{
+        flex: 2 0 0;
+        padding: 0.5em 0.5em 0.5em 0.5em;
+        align-self: flex-start;
+    }
+    .imagecontainer{
+        padding: 0.5em 0.5em 0.5em 0.5em;
+        align-self: flex-start;
+    }
 }
